Add Binder link

--- a/NanopublicationAnalysis_RO2019.ipynb
+++ b/NanopublicationAnalysis_RO2019.ipynb
@@ -18,7 +18,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To run the following queries you have to install Virtuoso and Jena Fuseki. "
+    "To run the following queries you have to install Virtuoso and Jena Fuseki. \n",
+    "\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/ImranAsif48/RO2019/master)"
    ]
   },
   {
