--- a/NanopublicationAnalysis_RO2019.ipynb
+++ b/NanopublicationAnalysis_RO2019.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,32 @@
     "# import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "import csv"
+    "import csv\n",
+    "\n",
+    "from SPARQLWrapper import SPARQLWrapper, JSON\n",
+    "\n",
+    "import statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'statistics' has no attribute '__version__'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-31a4da87cf6d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mstatistics\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__version__\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'statistics' has no attribute '__version__'"
+     ]
+    }
+   ],
+   "source": [
+    "statistics.__version__"
    ]
   },
   {
@@ -203,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from SPARQLWrapper import SPARQLWrapper, JSON\n",
+    "\n",
     "#Define local DisGeNet SPARQL endpoint and function to run queries over it\n",
     "dbSparqlDGN = SPARQLWrapper(\"http://localhost:8890/sparql/\")\n",
     "#dbSparqlDGN = SPARQLWrapper(\"http://localhost:3030/DisGeNet_V4/query\")\n",
@@ -1636,7 +1661,7 @@
     }
    ],
    "source": [
-    "import statistics\n",
+    "\n",
     "\n",
     "# For NeXtProt DataSet\n",
     "avg = statistics.median(nxtAssertionTriples) #round(sum(nxtAssertionTriples) / len(nxtAssertionTriples), 2)\n",
