--- a/NanopublicationAnalysis_RO2019.ipynb
+++ b/NanopublicationAnalysis_RO2019.ipynb
@@ -18,7 +18,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To run the following queries you have to install Virtuoso and Jena Fuseki. \n",
+    "<h2>Overview</h2>\n",
+    "\n",
+    "To re-run the analysis, you have to install the SPARQL endpoints (Virtuoso, Jena Fuseki) and upload the datasets to SPARQL endpoints. After that you have to give the SPARQL endpoint link for processing the SPARQL queries.\n",
+    "\n",
+    "- If you don't want to install the SPARQL endpoints, Then I provided the fecility to the analyser that run the data from the csv files. These csv files are provided with the jupyter notebook. The content of these files are extracted from the datasets .\n",
+    "\n",
+    "\n",
+    "<h3>Nanopublication Datasets Used</h3>\n",
+    "\n",
+    "- [neXtProt 1900_2000](https://sourceforge.net/projects/nextprot2rdf/files/data/nextprot/releases/2014-09/nextprot_19001_20000.tar.gz/download)\n",
+    "\n",
+    "- [DisGetNET 4.0](http://rdf.disgenet.org/download/v4.0.0/nanopublications_v4.0.0.0.trig.gz)\n",
+    "\n",
+    "- [WikiPathways 20170513](https://datahub.ckan.io/dataset/c830df94-bd9a-4920-b6c5-b3c2e9bfeb02/resource/0aed1da3-d386-425c-8e8d-fea39756fdfa/download/wp-monthy_all.trig.gz)\n",
+    "\n",
+    "- [LIDDI V1.02](https://drive.google.com/open?id=18B09S4MtWD1G3i8mDf-8kBU4VHZv_EFX)\n",
+    "\n",
+    "- [OpenBell 20131211](https://drive.google.com/open?id=1_JGBm29bJop8atea6PgCJLip9BZG-aD3)\n",
+    "\n",
     "\n",
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/ImranAsif48/RO2019/master)"
    ]
@@ -47,27 +65,6 @@
     "from SPARQLWrapper import SPARQLWrapper, JSON\n",
     "\n",
     "import statistics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'statistics' has no attribute '__version__'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-31a4da87cf6d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mstatistics\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__version__\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'statistics' has no attribute '__version__'"
-     ]
-    }
-   ],
-   "source": [
-    "statistics.__version__"
    ]
   },
   {
